# Software_Engineering_Basics

Pointers_basics/: Student1.cpp  Student2.cpp  a.out  test
binary_search_pattern/: greedy_binary_search.cpp  standard_binary_search.cpp
binary_tree_implementation/: main.cpp  test
bit_manipulation_basics/: bit  bitset.cpp
cool_dsa_tricks/: qs  tm  tmp.cpp
functionPointer/: Library.cpp  Library.h  Server.cpp  Server.h  client.cpp  tes
hashmap_implementation/hashmap_with_int_as_key/: with_stl.cpp  without_stl.cpp
hashmap_implementation/hashmap_with_string_as_key/: CMakeLists.txt  HashMap.cpp  HashMap.h  README.md  main.cpp
hashmap_implementation/template_class_hashmap/: CMakeLists.txt  hashmap.cpp
heaps_implementation/: heap  heap_sort.cpp  max_pq_implementation.cpp  test  test2
linked_list_implementation/: linked_list_using_stl_list.cpp  test  test.cpp
linked_list_implementation+patterns/: a.out  amazon  ass.cpp  linked_list.cpp  linked_list_patterns.cpp  linked_list_using_dummy_head.cpp  test  test2  test3  test4
multi_threading/promiseAndFuture/: ReadMe.md  promiseAndFutureWithPointer.cpp  promiseAndFutureWithStd::Move.cpp  promiseAndFutureWithStd::Ref.cpp
sliding_window_patterns/: tm  ts  variable_size_pattern.cpp
stacks_queue_implementaion/: Node.h  QueueUsingArray.cpp  QueueUsingArray.h  QueueUsingLL.cpp  QueueUsingLL.h  StackUsingLL.h  a.out  main.cpp
stacks_queue_implementaion/QUEUE/queue_using_array/: QueueUsingArray.cpp  main.cpp  test
stacks_queue_implementaion/QUEUE/queue_using_linked_list/: Node.h  QueueUsingLL.cpp  QueueUsingLL.h  (+2 more)
(+16 files in other folders)
